--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,7 @@ services:
       - "${SERVERPORT}:${SERVERPORT}"
   postgres:
     image: 'postgres:12.3'
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - ${PGPORT}
