--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "grommet": "^2.14.0",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.1.1"
   }
 }
