Changed frontend TypeScript config

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "target": "ESNext",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
-    "module": "ESNext",
+    "moduleResolution": "node",
     "jsx": "react",
     "strict": true,                           /* Enable all strict type-checking options. */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+    "allowSyntheticDefaultImports": true
   },
   "include": ["./*"]
 }
