--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "apollo-server-express": "^2.16.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
