--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node dist/main.js",
+    "start": "node dist/main.js",
     "build": "npm run build:server && npm run build:fe",
     "build:server": "tsc",
     "build:fe": "webpack --progress",
@@ -43,7 +43,6 @@
     "apollo-server-express": "^2.16.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "grommet": "^2.14.0",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
     "react": "^16.13.1",
