--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "css-loader": "^4.2.1",
@@ -43,6 +44,7 @@
     "@apollo/client": "^3.1.3",
     "apollo-server-express": "^2.16.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "pg": "^8.3.0",
