--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "npm run build:server && npm run build:fe",
     "build:server": "tsc",
     "build:fe": "webpack --progress",
-    "watch:fe": "webpack --progress --watch"
+    "watch:fe": "webpack --progress --watch",
+    "watch:server": "tsc-watch --onSuccess 'npm start'"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
+    "@types/pg": "^7.14.4",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.2",
@@ -36,6 +38,7 @@
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.2",
+    "tsc-watch": "^4.2.9",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
