--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,22 @@ services:
     build: .
     environment:
       - SERVERPORT
+      - DB_HOST
       - NODE_ENV
+      - POSTGRES_PASSWORD
+      - POSTGRES_USER
+      - POSTGRES_DB=${POSTGRES_USER}
     ports:
       - "${SERVERPORT}:${SERVERPORT}"
-  postgres:
+    depends_on:
+      - db
+  db:
     image: 'postgres:alpine'
     environment:
       - POSTGRES_PASSWORD
+      - POSTGRES_USER
+      - POSTGRES_DB=${POSTGRES_USER}
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
     ports:
-      - ${PGPORT}
+      - "${PGPORT}:${PGPORT}"
