Added persistence for image storage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - "${SERVERPORT}:${SERVERPORT}"
     depends_on:
       - db
+    volumes:
+      - ./public:/public
   db:
     image: 'postgres:alpine'
     environment:
