--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.1.0",
     "ts-loader": "^8.0.2",
     "tsc-watch": "^4.2.9",
     "typescript": "^3.9.7",
