--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,6 @@ services:
       - POSTGRES_USER
       - POSTGRES_DB=${POSTGRES_USER}
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - C:\Users\stave\code\lily-packs\pgdata:/var/lib/postgresql/data
     ports:
       - "${PGPORT}:${PGPORT}"
